Edit: Workflow capitalization

--- a/docs/gram/clients/using-vellum-agents-with-gram-mcp-servers.mdx
+++ b/docs/gram/clients/using-vellum-agents-with-gram-mcp-servers.mdx
@@ -110,7 +110,7 @@ Otherwise, use the **Create Workflow** button to create a new Workflow:
 
 - Add an **Agent** node.
 
-  ![Screenshot of adding an agent node to a Vellum workflow](./assets/vellum-add-agent-node.png)
+  ![Screenshot of adding an agent node to a Vellum Workflow](./assets/vellum-add-agent-node.png)
 
 - Click the **Agent** node, then click **+ Tool**.
 
@@ -148,11 +148,11 @@ Otherwise, use the **Create Workflow** button to create a new Workflow:
 
 - Connect the **Entrypoint** node to the **Agent** node, then connect the **Agent** node to the **Output**. Click on the **Output** node and under **Overview → Output Value**, select **Agent** for the **Node Output**, and select **Text** for the **Output Name**.
 
-  ![Screenshot of connecting workflow nodes in Vellum](./assets/vellum-connect-workflow-nodes.png)
+  ![Screenshot of connecting Workflow nodes in Vellum](./assets/vellum-connect-workflow-nodes.png)
 
-- Click **▶️ Run**. The workflow should return a response indicating whether pushing to production is safe based on the Push Advisor server's evaluation.
+- Click **▶️ Run**. The Workflow should return a response indicating whether pushing to production is safe based on the Push Advisor server's evaluation.
 
-  ![Screenshot of the workflow response showing the agent output](./assets/vellum-workflow-response.png)
+  ![Screenshot of the Workflow response showing the agent output](./assets/vellum-workflow-response.png)
 
 ## Troubleshooting
 
