--- a/docs/gram/api-clients/using-mastra-with-gram-mcp-servers.mdx
+++ b/docs/gram/api-clients/using-mastra-with-gram-mcp-servers.mdx
@@ -1,5 +1,5 @@
 ```
-title: "Connecting Mastra Agents to Gram-Hosted MCP Servers"
+title: "Connecting Mastra agents to Gram-hosted MCP servers"
 description: "Build a Mastra agent that connects to a Gram-hosted MCP server and uses natural language to query your APIs."
 sidebar:
   order: 2
@@ -88,7 +88,7 @@ Take note of your MCP server URL on the **Hosted URL** section.
 
 ## Connecting Mastra to your Gram-hosted MCP server
 
-This section walks you through building an agentic workflow using Mastra. 
+This section covers creating a Mastra project and configuring it to connect to a Gram-hosted MCP server.
 
 ### Project setup
 
@@ -105,14 +105,233 @@ You will be prompted with the following options:
 - The default provider: OpenAI
 - The OpenAI key: Enter the OpenAI key
 
-Then press Enter for the rest of options. 
+Press Enter to accept defaults for the remaining options.
 
-![CleanShot 2025-12-01 at 04.22.58@2x](/Users/koladev/ritza/speakeasy-developer-docs/docs/gram/api-clients/assets/CleanShot 2025-12-01 at 04.22.58@2x.png) 
+![Screenshot of the Mastra project setup prompts](./assets/mastra-project-setup.png)
 
-Once the project is created, you will have a `.env.local` environment variable file. Add the Gram key in the file. 
-
+After the project is created, open `.env.local` and add your API keys:
 ```txt
 GRAM_KEY=your-gram-api-key-here
 OPENAI_API_KEY=your-openai-api-key-here
 ```
 
+Install the MCP dependencies:
+```bash
+npm install '@mastra/mcp@^0.14.4' '@ai-sdk/openai@^1.0.0' 'dotenv@^16.4.5' --legacy-peer-deps
+```
+
+This installs the MCP client library, OpenAI SDK adapter, and dotenv for environment variables. The `--legacy-peer-deps` flag resolves a version conflict: the Mastra CLI installs `zod@^4.1.13`, but `@ai-sdk/openai@^1.0.0` requires `zod@^3.0.0`. Both versions are compatible at runtime.
+
+Install `tsx` as a dev dependency for running TypeScript:
+```bash
+npm install -D 'tsx@^4.7.0' --legacy-peer-deps
+```
+
+### Configure the project
+
+Update the `scripts` section in `package.json` to add a dev script:
+```json
+{
+  "scripts": {
+    "dev": "tsx src/index.ts",
+    "dev:mastra": "mastra dev",
+    "build": "mastra build",
+    "start": "mastra start"
+  }
+}
+```
+
+Make sure the project has the following structure:
+```
+src/
+  ├── config/
+  │   └── mcp-server.ts           # MCP server configuration
+  ├── mastra/
+  │   ├── agents/
+  │   │   └── mcp-agent.ts        # Agent with MCP tools
+  │   ├── workflows/
+  │   │   └── mcp-workflow.ts     # Workflow definition
+  │   └── index.ts                # Mastra instance
+  └── index.ts                    # Entry point
+```
+
+This follows Mastra's recommended organization: the `mastra/` directory contains agents and workflows, configuration lives in `config/`, and the entry point orchestrates everything.
+
+### Adding the MCP server configuration
+
+In `src/config/mcp-server.ts`, add the following code to configure the connection to your Gram-hosted MCP server:
+```typescript
+import { MCPClient } from "@mastra/mcp";
+import dotenv from "dotenv";
+import { resolve } from "path";
+
+dotenv.config({ path: resolve(process.cwd(), ".env.local") });
+
+export const gramMcpClient = new MCPClient({
+  servers: {
+    PushAdvisor: {
+      url: new URL("https://app.getgram.ai/mcp/your-mcp-server-slug"),
+      requestInit: {
+        headers: {
+          Authorization: `Bearer ${process.env.GRAM_KEY || ""}`,
+        },
+      },
+    },
+  },
+});
+```
+
+The [`MCPClient`](https://mastra.ai/reference/tools/mcp-client) class connects to MCP servers and handles protocol negotiation automatically. The configuration loads environment variables first with `dotenv.config()` so `GRAM_KEY` is available, then defines a server named `PushAdvisor` with its URL and Bearer token authentication. When you call methods like `getTools()`, the client connects to the server and discovers available tools.
+
+### Adding the agent configuration
+
+In `src/mastra/agents/mcp-agent.ts`, add an [agent](https://mastra.ai/docs/agents/overview) that can use the MCP server tools. The agent processes questions and decides which tools to call.
+```typescript
+import { Agent } from "@mastra/core/agent";
+import { openai } from "@ai-sdk/openai";
+import { gramMcpClient } from "../../config/mcp-server.js";
+
+let mcpAgentInstance: Agent | null = null;
+
+export async function getMcpAgent(): Promise<Agent> {
+  if (!mcpAgentInstance) {
+    const tools = await gramMcpClient.getTools();
+    
+    mcpAgentInstance = new Agent({
+      name: "GramMCPAgent",
+      instructions: "You are a helpful assistant that uses the CanIPushToProd MCP server tools to answer questions about pushing to production.",
+      model: openai("gpt-4o-mini"),
+      tools,
+    });
+  }
+  return mcpAgentInstance;
+}
+```
+
+The code uses a singleton pattern to cache the agent instance, avoiding the cost of recreating it on every call. The `getMcpAgent()` function fetches tools from the MCP client using `getTools()`, then creates an agent with `gpt-4o-mini` as the model (which supports the function calling needed for tool usage). The `instructions` property is the system prompt that guides the agent's behavior. The agent automatically decides when to call tools based on the user's question.
+
+### Adding the workflow definition
+
+A Mastra [workflow](https://mastra.ai/docs/workflows/overview) defines how an application processes requests. Add the following code in `src/mastra/workflows/mcp-workflow.ts`:
+```typescript
+import { createWorkflow, createStep } from "@mastra/core/workflows";
+import { getMcpAgent } from "../agents/mcp-agent.js";
+import { z } from "zod";
+import { mastra } from "../index.js";
+
+const processStep = createStep({
+  id: "check-push-day",
+  description: "Check if it's a good day to push to production using MCP server tools",
+  inputSchema: z.object({
+    input: z.string(),
+  }),
+  outputSchema: z.object({
+    output: z.string(),
+  }),
+  execute: async ({ inputData }) => {
+    const agent = await getMcpAgent();
+    const result = await agent.streamLegacy(
+      `Is it a good day to push today? Use the PushAdvisor MCP server tools to check if today is a good day to push to production.`
+    );
+    
+    let text = "";
+    for await (const chunk of result.textStream) {
+      text += chunk;
+    }
+    
+    return { output: text };
+  },
+});
+
+export const mcpWorkflow = createWorkflow({
+  id: "mcp-workflow",
+  description: "Workflow that checks if it's a good day to push to production",
+  inputSchema: z.object({
+    input: z.string().describe("The input question"),
+  }),
+  outputSchema: z.object({
+    output: z.string(),
+  }),
+  mastra,
+}).then(processStep).commit();
+```
+
+The `createStep` function defines a workflow step with Zod schemas for input and output validation. The step's `execute` function gets the agent and calls `streamLegacy()` with a prompt instructing the agent to use MCP tools. The code uses `streamLegacy()` because `gpt-4o-mini` is an AI SDK v4 model — for v5 models, use `generate()` instead. The response streams chunk by chunk and is collected into a complete string before returning. The `createWorkflow()` function defines the workflow with its own schemas, chains the step with `.then()`, and finalizes with `.commit()`.
+
+### Creating the entry point
+
+The entry point is where the application starts. Add the following code in `src/index.ts`:
+```typescript
+import dotenv from "dotenv";
+import { resolve } from "path";
+import { mcpWorkflow } from "./mastra/workflows/mcp-workflow.js";
+
+dotenv.config({ path: resolve(process.cwd(), ".env.local") });
+
+async function main() {
+  const input = process.argv[2] || "Is it a good day to push today?";
+
+  console.log("Starting Mastra workflow with Gram MCP server...");
+  console.log(`Input: ${input}\n`);
+
+  const run = await mcpWorkflow.createRunAsync();
+  const result = await run.start({
+    inputData: { input },
+  });
+
+  if (result.status === "success") {
+    console.log("Workflow completed successfully!");
+    console.log(`Output: ${result.result.output}\n`);
+  } else {
+    console.error(`Workflow failed: ${result.status === "failed" ? result.error : "Unknown error"}\n`);
+    process.exit(1);
+  }
+}
+
+if (import.meta.url === `file://${process.argv[1]}`) {
+  main().catch(console.error);
+}
+
+export { mcpWorkflow };
+```
+
+Environment variables load at the top level, so they're available when other modules import them. The `main()` function takes input from command-line arguments or uses a default question, creates a workflow run with `createRunAsync()`, and executes it with `run.start()`. The result object contains either the output on success or an error on failure. The final `if` statement ensures `main()` only runs when the file is executed directly, not when imported as a module.
+
+### Testing the project
+
+Run the application:
+```bash
+npm run dev "Is it a good day to push today?"
+```
+
+This uses `tsx` to run TypeScript directly without compilation. The question is passed as a command-line argument and becomes the workflow input.
+
+You should see output like:
+```
+Starting Mastra workflow with Gram MCP server...
+Input: Is it a good day to push today?
+
+Workflow completed successfully!
+Output: Yes, today is a good day to push to production! It's Monday, which is considered safe for deployments.
+```
+
+The exact output depends on the MCP server's response and how the agent interprets it.
+
+Here's what happens when the workflow runs: the entry point loads environment variables and creates a workflow run. The workflow step gets the agent, which triggers the MCP client to connect to the server and fetch available tools. The agent analyzes the question and calls the appropriate MCP tool (like `can_i_push_to_prod`). The tool runs on the server and returns a result, which the agent uses to generate a natural-language response.
+
+## Troubleshooting
+
+### Connection errors
+
+If you see connection errors:
+
+- Verify `GRAM_KEY` is set correctly in `.env.local` (check for typos, extra spaces, or missing quotes).
+- Confirm the MCP server URL is correct and the server is accessible.
+
+### Model compatibility
+
+If you see model compatibility errors:
+
+- Use `streamLegacy()` for AI SDK v4 models like `gpt-4o-mini`.
+- For AI SDK v5 models, use `generate()` instead.
+- See the [Mastra model documentation](https://mastra.ai/docs/llms/overview) for compatibility details.
