--- a/docs/gram/api-clients/using-mastra-with-gram-mcp-servers.mdx
+++ b/docs/gram/api-clients/using-mastra-with-gram-mcp-servers.mdx
@@ -189,7 +189,7 @@ In `src/mastra/agents/mcp-agent.ts`, add an [agent](https://mastra.ai/docs/agent
 ```typescript
 import { Agent } from "@mastra/core/agent";
 import { openai } from "@ai-sdk/openai";
-import { gramMcpClient } from "../../config/mcp-server.js";
+import { gramMcpClient } from "../config/mcp-server";
 
 let mcpAgentInstance: Agent | null = null;
 
@@ -215,9 +215,9 @@ The code uses a singleton pattern to cache the agent instance, avoiding the cost
 A Mastra [workflow](https://mastra.ai/docs/workflows/overview) defines how an application processes requests. Add the following code in `src/mastra/workflows/mcp-workflow.ts`:
 ```typescript
 import { createWorkflow, createStep } from "@mastra/core/workflows";
-import { getMcpAgent } from "../agents/mcp-agent.js";
+import { getMcpAgent } from "../agents/mcp-agent";
 import { z } from "zod";
-import { mastra } from "../index.js";
+import { mastra } from "../index";
 
 const processStep = createStep({
   id: "check-push-day",
@@ -264,7 +264,7 @@ The entry point is where the application starts. Add the following code in `src/
 ```typescript
 import dotenv from "dotenv";
 import { resolve } from "path";
-import { mcpWorkflow } from "./mastra/workflows/mcp-workflow.js";
+import { mcpWorkflow } from "./workflows/mcp-workflows";
 
 dotenv.config({ path: resolve(process.cwd(), ".env.local") });
 
@@ -296,6 +296,14 @@ export { mcpWorkflow };
 ```
 
 Environment variables load at the top level, so they're available when other modules import them. The `main()` function takes input from command-line arguments or uses a default question, creates a workflow run with `createRunAsync()`, and executes it with `run.start()`. The result object contains either the output on success or an error on failure. The final `if` statement ensures `main()` only runs when the file is executed directly, not when imported as a module.
+
+Make sure the `src/mastra/index.ts` file contains the following code: 
+
+```ts
+import { Mastra } from '@mastra/core';
+
+export const mastra = new Mastra()   
+```
 
 ### Testing the project
 
