--- a/docs/gram/api-clients/using-mastra-with-gram-mcp-servers.mdx
+++ b/docs/gram/api-clients/using-mastra-with-gram-mcp-servers.mdx
@@ -189,7 +189,7 @@ In `src/mastra/agents/mcp-agent.ts`, add an [agent](https://mastra.ai/docs/agent
 ```typescript
 import { Agent } from "@mastra/core/agent";
 import { openai } from "@ai-sdk/openai";
-import { gramMcpClient } from "../config/mcp-server";
+import { gramMcpClient } from "../../config/mcp-server";
 
 let mcpAgentInstance: Agent | null = null;
 
