--- a/docs/gram/clients/using-zapier-with-gram-mcp-server.mdx
+++ b/docs/gram/clients/using-zapier-with-gram-mcp-server.mdx
@@ -42,7 +42,7 @@ Enter a URL slug for the MCP server (e.g., `zapier-push-advisor`) and click **Co
 
 ![mcp-slug](assets/docs/gram/img/guides/zapier/mcp-slug.png)
 
-This will finalize the creating of the toolset from the OpenAPI document.
+This will finalize the creation of the toolset from the OpenAPI document.
 
 ### Step 4: Test the toolset
 
@@ -55,7 +55,7 @@ The AI will determine the correct tool to call and return a response based on th
 ![playground](assets/docs/gram/img/guides/zapier/playground.gif)
 
 ### Creating an API key
-Navigate to **Settings** and click **New API Key**. Name your key and click **Create**. Then copy the key and store it somewhere secure, we will use it later to integrate with Zapier.
+Navigate to **Settings** and click **New API Key**. Name your key and click **Create**. Then copy the key and store it somewhere secure; we will use it later to integrate with Zapier.
 
 ![gram-api-key](assets/docs/gram/img/guides/zapier/gram-api-key.png)
 
@@ -65,7 +65,7 @@ Go to the **MCP** tab and click on your toolset. Click **Enable**, then scroll d
 
 ![public-visibility](assets/docs/gram/img/guides/zapier/public-visibility.png)
 
-Finally, copy the **Hosted URL** from the configuration (e.g., `https://app.getgram.ai/mcp/zapier-push-advisor`) which we will use, along with our API key, to integrate with Zapier.
+Finally, copy the **Hosted URL** from the configuration (e.g. `https://app.getgram.ai/mcp/zapier-push-advisor`) which we will use, along with our API key, to integrate with Zapier.
 
 ## Creating a Zap with Gram MCP
 
@@ -83,11 +83,11 @@ For the **trigger event** select **new message posted to channel**, then sign in
 
 ![trigger-config-1](assets/docs/gram/img/guides/zapier/trigger-config-1.png)
 
-Next, in the **configure** tab, select your preferred channel from your Slack workspace and click **Continue**
+Next, in the **configure** tab, select your preferred channel from your Slack workspace and click **Continue**.
 
 ![trigger-config-2](assets/docs/gram/img/guides/zapier/trigger-config-2.png)
 
-Before testing the trigger, send a message in your slack channel that we can use for the remaining setup (e.g. "Should I push?"). Then test the trigger, select the message you sent from the detected list, and then click **Continue with select record**.
+Before testing the trigger, send a message in your Slack channel that we can use for the remaining setup (e.g. "Should I push?"). Then test the trigger, select the message you sent from the detected list, and then click **Continue with select record**.
 
 ![trigger-config-3](assets/docs/gram/img/guides/zapier/trigger-config-3.png)
 
@@ -99,7 +99,7 @@ From the Actions menu, search for 'MCP' and choose **MCP Client**.
 Select **Run Tool** as the event and click **Continue**.
 ![mcp-client](assets/docs/gram/img/guides/zapier/mcp-client.png)
 
-Click **Sign in** under **Account** and enter your **Server URL** and **Bearer Token** (this will be the API key that we copied from gram earlier). Set Transport to **Streamable HTTP** and OAuth to **No**, then click **Yes, Continue to MCP Client**.
+Click **Sign in** under **Account** and enter your **Server URL** and **Bearer Token** (this will be the API key that we copied from Gram earlier). Set Transport to **Streamable HTTP** and OAuth to **No**, then click **Yes, Continue to MCP Client**.
 
 ![zapier-gram-account](assets/docs/gram/img/guides/zapier/zapier-gram-account.png)
 
@@ -115,7 +115,7 @@ Once you're confident that our Gram server is connected press the **+** to add a
 
 ### Step 3: AI response
 
-To demonstrate how we can integrate an LLM into our workflow using Zapier we will add an **AI by Zapier** action. We will pass it the result of our MCP tool call and get a customized response.
+To demonstrate how we can integrate an LLM into our workflow using Zapier, we will add an **AI by Zapier** action. We will pass it the result of our MCP tool call and get a customized response.
 
 When we add the action, we will be presented with a prompt builder screen. Here we can customize our AI Model to do exactly what we want.
 
@@ -160,7 +160,7 @@ Add a final action step and select **Slack**. Choose **Send Channel Message** as
 
 ![slack-send](assets/docs/gram/img/guides/zapier/slack-send.png)
 
-In the **Channel** field, select the same channel as the trigger. In the **Message Text** field, insert the output from the **AI by Zapier** step. Make sure **Send as a bot?** is set to **Yes**. This will ensure that our trigger action does not kick off for the bot message causing a loop.
+In the **Channel** field, select the same channel as the trigger. In the **Message Text** field, insert the output from the **AI by Zapier** step. Make sure **Send as a bot?** is set to **Yes**. This will ensure that our trigger action does not kick off for the bot message, causing a loop.
 
 ![slack-message-config](assets/docs/gram/img/guides/zapier/slack-message-config.png)
 
@@ -175,6 +175,7 @@ To deploy and enable your Zap, first rename it to something relevant and then hi
 Your Zap is now live and you can test it by sending a message in your Slack channel.
 
 ![slack-message](assets/docs/gram/img/guides/zapier/slack-message.png)
+
 ## What's next
 
 You have successfully connected Zapier to a Gram-hosted MCP server. This allows you to bring any API or tool hosted on Gram into your Zapier automation workflows.
