--- a/docs/gram/api-clients/using-mastra-with-gram-mcp-servers.mdx
+++ b/docs/gram/api-clients/using-mastra-with-gram-mcp-servers.mdx
@@ -1,15 +1,15 @@
-```
+---
 title: "Connecting Mastra agents to Gram-hosted MCP servers"
 description: "Build a Mastra agent that connects to a Gram-hosted MCP server and uses natural language to query your APIs."
 sidebar:
   order: 2
-```
+---
 
-[Mastra](https://mastra.ai/) is a TypeScript framework for building AI-powered applications. Its MCP client lets you connect agents to external tools and APIs. This guide shows you how to connect a Mastra agent to a Gram-hosted MCP server using the Push Advisor API from the [Gram concepts guide](https://docs.speakeasy.com/mcp/concepts).
+[Mastra](https://mastra.ai/) is a TypeScript framework for building AI-powered applications. Its MCP client lets you connect agents to external tools and APIs. This guide shows you how to connect a Mastra agent to a Gram-hosted MCP server using an example Push Advisor API.
 
 By the end, you'll have a workflow that uses natural language to check whether it's safe to push to production.
 
-Find the complete code and OpenAPI document in the [Push Advisor API repository](LINK_HERE).
+Find the complete code and OpenAPI document in the [Push Advisor API repository](https://github.com/ritza-co/gram-examples/tree/main/push-advisor-api).
 
 ## Prerequisites
 
