--- a/docs/gram/clients/using-zapier-with-gram-mcp-server.mdx
+++ b/docs/gram/clients/using-zapier-with-gram-mcp-server.mdx
@@ -2,7 +2,7 @@
 
 [Zapier](https://zapier.com/) is a leading automation platform that connects thousands of apps. With the **MCP Client by Zapier** integration, you can connect Zapier to your [Gram-hosted MCP servers](/blog/release-gram-beta), allowing you to trigger tools and actions on your MCP server directly from your Zapier workflows.
 
-This guide will show you how to connect Zapier to a Gram-hosted MCP server using the example Push Advisor API. You'll learn how to set up the connection and create a Zap that will interact with you in a Slack channel and use custom tools to check if today is a good day to push to production.
+This guide will show you how to connect Zapier to a Gram-hosted MCP server using an example Push Advisor API. You'll learn how to set up the connection and create a Zap that you will interact with in a Slack channel and use custom MCP tools to check if today is a good day to push to production.
 
 ## Prerequisites
 
@@ -14,33 +14,37 @@ To follow this tutorial, you need:
 
 ## Creating a Gram MCP server
 
-If you already have a Gram MCP server configured (like the Push Advisor from other guides), you can skip to [connecting Zapier to your Gram-hosted MCP server](#connecting-zapier-to-your-gram-hosted-mcp-server).
+If you already have a Gram MCP server configured (like the Push Advisor from other guides), you can skip to [connecting Zapier to your Gram-hosted MCP server](#creating-a-zap-with-gram-mcp).
 
 ### Setting up a Gram project
 
-In the [Gram dashboard](https://app.getgram.ai), click **Get Started** and then **Start from API**.
+In the [Gram dashboard](https://app.getgram.ai), click **New Project** to create a new project. Enter a project name and click **Submit**.
 
-![get-started](assets/docs/gram/img/guides/zapier/get-started.png)
+![get-started](/assets/docs/gram/img/guides/zapier/get-started.png)
+
+Once the project is created, click the **Get Started** button.
+
+Choose **Start from API**. Gram will then guide you through the following steps.
 
 ### Step 1: Upload the OpenAPI document
 
 Upload the [Push Advisor OpenAPI document](https://github.com/ritza-co/gram-examples/blob/main/push-advisor-api/openapi.yaml), enter "Push Advisor" as the API name, and click **Continue**.
 
-![open-api-doc](assets/docs/gram/img/guides/zapier/upload-openAPI.png)
+![open-api-doc](/assets/docs/gram/img/guides/zapier/upload-openAPI.png)
 
 ### Step 2: Create a toolset
 
 Give your toolset a name (e.g. `push_advisor`) and click **Continue**. This will generate tools from your OpenAPI document.
 
-![name-toolset](assets/docs/gram/img/guides/zapier/name-toolset.png)
+![name-toolset](/assets/docs/gram/img/guides/zapier/name-toolset.png)
 
-Note the names of the tools that have been extracted from the OpenAPI document.
+Note the names of the tools that have been extracted from the OpenAPI document. 
 
 ### Step 3: Configure MCP
 
 Enter a URL slug for the MCP server (e.g., `zapier-push-advisor`) and click **Continue**.
 
-![mcp-slug](assets/docs/gram/img/guides/zapier/mcp-slug.png)
+![mcp-slug](/assets/docs/gram/img/guides/zapier/mcp-slug.png)
 
 This will finalize the creation of the toolset from the OpenAPI document.
 
@@ -52,66 +56,68 @@ Ask some questions in the chat that would trigger tool calls. For example, "Can 
 
 The AI will determine the correct tool to call and return a response based on the answer data.
 
-![playground](assets/docs/gram/img/guides/zapier/playground.gif)
+![playground](/assets/docs/gram/img/guides/zapier/playground.gif)
 
 ### Creating an API key
+
 Navigate to **Settings** and click **New API Key**. Name your key and click **Create**. Then copy the key and store it somewhere secure; we will use it later to integrate with Zapier.
 
-![gram-api-key](assets/docs/gram/img/guides/zapier/gram-api-key.png)
+![gram-api-key](/assets/docs/gram/img/guides/zapier/gram-api-key.png)
 
 ### Publishing an MCP server
 
-Go to the **MCP** tab and click on your toolset. Click **Enable**, then scroll down and change the visibility to **Public** .
+Go to the **MCP** tab and click on your toolset. Click **Enable**, then scroll down and change the visibility to **Public**.
 
-![public-visibility](assets/docs/gram/img/guides/zapier/public-visibility.png)
+![public-visibility](/assets/docs/gram/img/guides/zapier/public-visibility.png)
 
-Finally, copy the **Hosted URL** from the configuration (e.g. `https://app.getgram.ai/mcp/zapier-push-advisor`) which we will use, along with our API key, to integrate with Zapier.
+Finally, copy the **Hosted URL** from the configuration (e.g. `https://app.getgram.ai/mcp/your-mcp-slug`) which we will use, along with our API key, to integrate with Zapier.
 
 ## Creating a Zap with Gram MCP
 
 Let's create a Zap that will interact with our user through Slack and make use of our MCP toolset.
 
-To get started, sign into your Zapier account and press **Create** and choose **Zaps**.
+To get started, sign into your Zapier account and press **+ Create** and choose **Zaps**.
 
-![zapier-create](assets/docs/gram/img/guides/zapier/zapier-create.png)
+![zapier-create](/assets/docs/gram/img/guides/zapier/zapier-create.png)
 
 ### Step 1: Create the Trigger
 
 Click the placeholder for the trigger to open the trigger configuration screen and select Slack from the options list.
 
-For the **trigger event** select **new message posted to channel**, then sign in to your Slack account under **Account** and press **Continue**.
+For the **Trigger event** select **New Message Posted to Channel**, then sign in to your Slack account under **Account** and press **Continue**.
 
-![trigger-config-1](assets/docs/gram/img/guides/zapier/trigger-config-1.png)
+![trigger-config-1](/assets/docs/gram/img/guides/zapier/trigger-config-1.png)
 
-Next, in the **configure** tab, select your preferred channel from your Slack workspace and click **Continue**.
+Next, in the **Configure** tab, select your preferred channel from your Slack workspace and click **Continue**.
 
-![trigger-config-2](assets/docs/gram/img/guides/zapier/trigger-config-2.png)
+![trigger-config-2](/assets/docs/gram/img/guides/zapier/trigger-config-2.png)
 
 Before testing the trigger, send a message in your Slack channel that we can use for the remaining setup (e.g. "Should I push?"). Then test the trigger, select the message you sent from the detected list, and then click **Continue with select record**.
 
-![trigger-config-3](assets/docs/gram/img/guides/zapier/trigger-config-3.png)
+![trigger-config-3](/assets/docs/gram/img/guides/zapier/trigger-config-3.png)
 
 
 ### Step 2: Add the MCP Client Action
 
 From the Actions menu, search for 'MCP' and choose **MCP Client**.
 
-Select **Run Tool** as the event and click **Continue**.
-![mcp-client](assets/docs/gram/img/guides/zapier/mcp-client.png)
+Select **Run Tool** as the **Action event**.
 
-Click **Sign in** under **Account** and enter your **Server URL** and **Bearer Token** (this will be the API key that we copied from Gram earlier). Set Transport to **Streamable HTTP** and OAuth to **No**, then click **Yes, Continue to MCP Client**.
+![mcp-client](/assets/docs/gram/img/guides/zapier/mcp-client.png)
 
-![zapier-gram-account](assets/docs/gram/img/guides/zapier/zapier-gram-account.png)
+Click **Sign in** under **Account** and enter your Gram **MCP Server URL** and **Bearer Token** (this will be the API key that we copied from Gram earlier). Set Transport to **Streamable HTTP** and OAuth to **No**, then click **Yes, Continue to MCP Client**.
 
-In the **Action** section, click the **Tool Name** dropdown to load the list of tools from your Gram server. Select the `should_i_push` tool.
+![zapier-gram-account](/assets/docs/gram/img/guides/zapier/zapier-gram-account.png)
 
-![select-tool](assets/docs/gram/img/guides/zapier/select-tool.png)
+Click **Continue**. In the **Configure** section click the **Tool** dropdown to load the list of tools from your Gram server. Select the `can_i_push_to_prod` tool.
+
+![select-tool](/assets/docs/gram/img/guides/zapier/select-tool.png)
 
 Click **Continue** and then **Test step**. You should see a successful response from the Gram MCP server containing the tool result.
 
-![tool-result](assets/docs/gram/img/guides/zapier/tool-result.png)
+![tool-result](/assets/docs/gram/img/guides/zapier/tool-result.png)
 
-Once you're confident that our Gram server is connected press the **+** to add another action.
+Once you're confident that the Gram server is connected, press the **+** to add another action.
 
 ### Step 3: AI response
 
@@ -119,9 +125,9 @@ To demonstrate how we can integrate an LLM into our workflow using Zapier, we wi
 
 When we add the action, we will be presented with a prompt builder screen. Here we can customize our AI Model to do exactly what we want.
 
-Select **Custom prompt** for **Build mode** and your preferred **Model**. Then, under **Input fields** press **Add field**. Give the field a name, then under **Field value** press the **+** sign and find the **Structured Content Reason** field that is returned from our MCP tool. Finally, set the content type to **Text** and press **Save**.
+Select **Custom prompt** for **Build mode** and your preferred **Model**. Then, under **Input fields** press **+ Add field**. Give the field a name, then under **Field value** press the **+** sign and find the **Structured Content Reason** field that is returned from our MCP tool. Finally, set the content type to **Text** and press **Save**.
 
-![input-ai-field](assets/docs/gram/img/guides/zapier/input-ai-field.png)
+![input-ai-field](/assets/docs/gram/img/guides/zapier/input-ai-field.png)
 
 In the **Prompt** field, instruct the bot to give us a friendly response to questions about pushing to production making sure to use the result of the tool. A stronger prompt will cause the AI to behave more predictably. 
 For example, a reasonably strong prompt could be:
@@ -150,19 +156,19 @@ Your task is to write a concise Slack reply based on this status:
 - Address the team directly.
 ```
 
-Zapier will give us an estimation on how strong it thinks our prompt is, and allows us to generate a sample response so we can see if we are satisfied with the behaviour. Once you are happy with the prompt, click **Finish**.
+Zapier will give us an estimation on how strong it thinks our prompt is, and allows us to generate a sample preview response so we can see if we are satisfied with the behaviour. Once you are happy with the prompt, click **Finish**.
 
-![prompt-config](assets/docs/gram/img/guides/zapier/prompt-config.png)
+![prompt-config](/assets/docs/gram/img/guides/zapier/prompt-config.png)
 
 ### Step 4: Reply in Slack
 
-Add a final action step and select **Slack**. Choose **Send Channel Message** as the event and click **Continue**.
+Add a final action step and select **Slack**. Choose **Send Channel Message** as the **Action event** and click **Continue**.
 
-![slack-send](assets/docs/gram/img/guides/zapier/slack-send.png)
+![slack-send](/assets/docs/gram/img/guides/zapier/slack-send.png)
 
 In the **Channel** field, select the same channel as the trigger. In the **Message Text** field, insert the output from the **AI by Zapier** step. Make sure **Send as a bot?** is set to **Yes**. This will ensure that our trigger action does not kick off for the bot message, causing a loop.
 
-![slack-message-config](assets/docs/gram/img/guides/zapier/slack-message-config.png)
+![slack-message-config](/assets/docs/gram/img/guides/zapier/slack-message-config.png)
 
 Click **Continue** and test the step to send a message to Slack.
 
@@ -170,17 +176,17 @@ Click **Continue** and test the step to send a message to Slack.
 
 To deploy and enable your Zap, first rename it to something relevant and then hit **Publish**.
 
-![rename-and-deploy](assets/docs/gram/img/guides/zapier/rename-and-deploy.png)
+![rename-and-deploy](/assets/docs/gram/img/guides/zapier/rename-and-deploy.png)
 
 Your Zap is now live and you can test it by sending a message in your Slack channel.
 
-![slack-message](assets/docs/gram/img/guides/zapier/slack-message.png)
+![slack-message](/assets/docs/gram/img/guides/zapier/slack-message.png)
 
 ## What's next
 
 You have successfully connected Zapier to a Gram-hosted MCP server. This allows you to bring any API or tool hosted on Gram into your Zapier automation workflows.
 
-**Explore more tools**: Add more tools to your Gram toolset and they will become available in the "Run Tool" dropdown in Zapier.
+You can add more tools to your Gram toolset and they will become available in the "Run Tool" dropdown in Zapier.
 
 Ready to build your own MCP server? [Try Gram today](/product/gram) and see how easy it is to turn any API into agent-ready tools.
 
