--- a/docs/gram/api-clients/using-mastra-with-gram-mcp-servers.mdx
+++ b/docs/gram/api-clients/using-mastra-with-gram-mcp-servers.mdx
@@ -27,7 +27,7 @@ If you already have a Gram MCP server configured, you can skip to [connecting Ma
 
 In the [Gram dashboard](https://app.getgram.ai), click **New Project** to create a new project. Enter a project name and click **Submit**
 
-![Screenshot of the Gram dashboard showing the New Project modal](./assets/gram-new-project.png)
+![Screenshot of the Gram dashboard showing the New Project modal](/assets/docs/gram/img/guides/mastra/gram-new-project.png)
 
 Once the project is created, click the **Get Started** button.
 
@@ -37,13 +37,13 @@ Choose **Start from API**. Gram will then guide you through the following steps.
 
 Upload the [Push Advisor OpenAPI document](https://github.com/ritza-co/gram-examples/blob/main/push-advisor-api/openapi.yaml), enter the name of your API, and click **Continue**.
 
-![Screenshot of the upload your OpenAPI document dialog](./assets/upload-openapi-spec.png)
+![Screenshot of the upload your OpenAPI document dialog](/assets/docs/gram/img/guides/mastra/upload-openapi-spec.png)
 
 #### Step 2: Create a toolset
 
 Give your toolset a name (for example, "Push Advisor") and click **Continue**.
 
-![Screenshot of the create toolset dialog](./assets/create-toolset.png)
+![Screenshot of the create toolset dialog](/assets/docs/gram/img/guides/mastra/create-toolset.png)
 
 Notice that the **Name Your Toolset** dialog displays the names of the tools that Gram will generate from your OpenAPI document.
 
@@ -51,13 +51,13 @@ Notice that the **Name Your Toolset** dialog displays the names of the tools tha
 
 Enter a URL slug for the MCP server and click **Continue**.
 
-![Screenshot of the configure MCP dialog](./assets/configure-mcp.png)
+![Screenshot of the configure MCP dialog](/assets/docs/gram/img/guides/mastra/configure-mcp.png)
 
 Gram will create a new toolset from the OpenAPI document.
 
 Click **Toolsets** in the sidebar to view the Push Advisor toolset.
 
-![Screenshot of the Gram dashboard showing the Push Advisor toolset](./assets/toolset-created.png)
+![Screenshot of the Gram dashboard showing the Push Advisor toolset](/assets/docs/gram/img/guides/mastra/toolset-created.png)
 
 ### Configuring environment variables
 
@@ -65,11 +65,11 @@ Click **Toolsets** in the sidebar to view the Push Advisor toolset.
 
 In the **Environments** tab, click the **Default** environment. Click **Fill for Toolset**. Select the **Push Advisor** toolset and click **Fill Variables** to automatically populate the required variables.
 
-![Screenshot showing the fill for toolset dialog to automatically populate required variables](./assets/fill-env-vars-toolset.png)
+![Screenshot showing the fill for toolset dialog to automatically populate required variables](/assets/docs/gram/img/guides/mastra/fill-env-vars-toolset.png)
 
 The Push Advisor API is hosted at `https://canpushtoprod.abdulbaaridavids04.workers.dev`, so set the `<your_API_name>_SERVER_URL` environment variable to `https://canpushtoprod.abdulbaaridavids04.workers.dev`. Click **Save**.
 
-![Set server URL](./assets/set-server-url.png)
+![Set server URL](/assets/docs/gram/img/guides/mastra/set-server-url.png)
 
 
 ### Publishing an MCP server
@@ -80,7 +80,7 @@ Go to the **MCP** tab, find the Push Advisor toolset, and click the title of the
 
 On the **MCP Details** page, click **Enable** and then **Enable Server** to enable the server.
 
-![Screenshot of the MCP details page](./assets/mcp-details.png)
+![Screenshot of the MCP details page](/assets/docs/gram/img/guides/mastra/mcp-details.png)
 
 Take note of your MCP server URL on the **Hosted URL** section.
 
@@ -107,7 +107,7 @@ You will be prompted with the following options:
 
 Press Enter to accept defaults for the remaining options.
 
-![Screenshot of the Mastra project setup prompts](./assets/mastra-project-setup.png)
+![Screenshot of the Mastra project setup prompts](/assets/docs/gram/img/guides/mastra/mastra-project-setup.png)
 
 After the project is created, create a `.env.local` file and add your API keys:
 
