--- a/openapi/frameworks/laravel.mdx
+++ b/openapi/frameworks/laravel.mdx
@@ -746,6 +746,17 @@ Let's take a look at the resulting OpenAPI for the request body now:
 
 As you can see, a lot more information is provided which will help anyone who wants to interact with this API.
 
+## Upgrading to OpenAPI v3.1
+
+Update Scribe to v5.6.0 or later and set the OpenAPI version in `config/scribe.php`:
+
+```php
+    'openapi' => [
+        'version' => '3.1.3',
+```
+
+This will generate an OpenAPI v3.1 document, which has several advantages over v3.0, including support for JSON Schema, better handling of nullable types, and improved support for webhooks.
+
 ## Summary
 
-Generating an OpenAPI specification for your Laravel API is a great way to improve developer experience and streamline API consumption after the API has been built. When API design-first is not an option, "catching up" with Scribe means you can quickly get to the point of having a complete OpenAPI document that can be used in tools like Speakeasy to generate SDKs, tests, and more.
+When API design-first is not an option, "catching up" with Scribe means you can quickly get to the point of having a complete OpenAPI document without having to duplicate a lot of information. Let the code do the talking, and enable tools like Speakeasy to generate SDKs, tests, and more. 
